--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ html, body {
   bottom: 0;
   font-size: 5rem;
   color: #eee;
+  transition: all 0.2s ease;
 }
 
 .img1 a:hover {
@@ -158,3 +159,21 @@ html, body {
     transform: rotate(360deg);
   }
 }
+
+/* Gallery Link Styling */
+.link-btn{
+  background: #050505;
+  padding: 2rem 4rem;
+  color: #eee;
+
+  border: 3px solid #c4c4c4;
+  transition: all 0.4s ease;
+}
+
+.link-btn:hover {
+  cursor: pointer;
+  color: #050505;
+  background: #eee;
+}
+
+/* Gallery Page Styling */
